--- a/application/push/view/message/chart.html
+++ b/application/push/view/message/chart.html
@@ -86,8 +86,8 @@
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="/asset/js/html2canvas.min.js"></script>
     <script>
-        var server = "ws://127.0.0.1:2346";
-        //var server = "wss://imdemo.weiyunyingxiao.com";
+        //var server = "ws://127.0.0.1:2346";
+        var server = "wss://imdemo.weiyunyingxiao.com";
         var msg = $('#msg').val();
         var ws = new WebSocket(server);
         var firstMessageId = 1;   //请求到的最早的消息
@@ -246,6 +246,8 @@
                     console.log('未知类型消息');
                     break;
             }
+
+            
         }
     </script>
     <!--地图-->
