--- a/application/push/view/message/index.html
+++ b/application/push/view/message/index.html
@@ -71,8 +71,8 @@
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script>
-        var server = "ws://127.0.0.1:2346";
-        //var server = "wss://imdemo.weiyunyingxiao.com";
+        //var server = "ws://127.0.0.1:2346";
+        var server = "wss://imdemo.weiyunyingxiao.com";
         var msg = $('#msg').val();
         var ws = new WebSocket(server);
         var firstMessageId = 1;   //请求到的最早的消息
